example/secondfile/objects/RDS_Access_Billing_Element_Details__c.object
<CustomObject>
    <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Circuit ID-RDS-Access Billing Element Details</description>
    <fields>
        <fullName>Access_Charge_Element_ID__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Circuit ID-RDS-Access Billing Element Details-Access Charge Element ID</description>
        <label>Access Charge Element ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Cust_Specified_Rate_Code__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Circuit ID-RDS-Access Billing Element Details-Access Cust Specified Rate Code</description>
        <label>Access Cust Specified Rate Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Override_Rate_Amount__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Circuit ID-RDS-Access Billing Element Details-Access Override Rate Amount</description>
        <label>Access Override Rate Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Quantity__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Circuit ID-RDS-Access Billing Element Details-Access Quantity</description>
        <label>Access Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Unique_Service_ID__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Circuit ID-RDS-Access Billing Element Details-Access Unique Service ID</description>
        <label>Access Unique Service ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>This is a technical field to indicate that record has been created due to MACD Disconnect. Not required on page layout.</description>
        <label>MACD Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Access_Circuit_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Circuit ID-RDS-Access Billing Element Details-RDS-Access Circuit ID</description>
        <label>RDS-Access Circuit ID</label>
        <referenceTo>RDS_Access_Circuit_ID__c</referenceTo>
        <relationshipLabel>RDS-Access Billing Element Details</relationshipLabel>
        <relationshipName>RDS_Access_Billing_Element_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RDS-Access Billing Element Details</label>
    <nameField>
        <displayFormat>ABED-{0000}</displayFormat>
        <label>RDS-Access Billing Element Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-Access Billing Element Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Restrict_Creation_for_Non_MACD_D_AccBill</fullName>
        <active>false</active>
        <description>This validation rule will prevent creation of records for SI EBM Admin and EBM DEV OPs profile when the record is not of MACD Disconnect type</description>
        <errorConditionFormula>AND(MACD_Type__c &lt;&gt; &apos;D&apos;, MACD_Type__c &lt;&gt; &apos;C&apos;, 
OR($Profile.Name = &apos;SI_EBM_DEV_OPS&apos;,$Profile.Name = &apos;SI_EBM Admin&apos;), 
ISNEW() )</errorConditionFormula>
        <errorMessage>You do not have permission to create a new RDS-Access Billing Element Details record.</errorMessage>
    </validationRules>
</CustomObject>